# short-term-stock-dashboard

./: .gitignore  AGENTS.md  Dockerfile  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/app/core/: config.py  security.py
backend/app/routers/: alerts.py  auth.py  backtests.py  scoring.py  stock_pools.py  strategies.py  teams.py  tonghuashun.py
backend/app/services/: alerts.py  backtesting.py  scoring.py  tonghuashun.py
backend/app/services/data_sources/: base.py  sample.py
backend/tests/: conftest.py  test_alerts_backtests.py  test_auth.py  test_research_setup.py  test_scoring.py  test_tonghuashun_sync.py
docs/superpowers/plans/: 2026-06-28-stock-analysis-dashboard-implementation.md
docs/superpowers/specs/: 2026-06-28-stock-analysis-dashboard-design.docx  2026-06-28-stock-analysis-dashboard-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  test-setup.ts  types.ts
frontend/src/api/: client.ts
scripts/: convert_spec_to_docx.py  start_public_tunnel.mjs
