[project]
name = "stock-analysis-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",
    "ths-favorite @ git+https://github.com/sunnysab/ths-favorite.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
